# job_recommendation_system

./: .gitignore  app.py  index.html  mcp_server.py  pyproject.toml  requirements.txt  test_apify.py
src/: database.py  helper.py  job_api.py
